# nm-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/object/: elf.rs  mod.rs  symbol.rs
test/: simple.amd64.elf
